tests/parser/valid/statements/test_block.src
fn main() -> void {
    {
        int x = 10;
        int y = 20;
    }
    {
        int a = 1;
        {
            int b = 2;
        }
    }
}