tests/parser/invalid/syntax_errors/test_wrong_expression.src
x = = 10;
y = 10 20;
z = (1 + 2) * );
a = (1 + ) 2;
b = 1 + * 2;